{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 618,
  "lineage": "fbcbf932-9f2c-94ef-bf21-9176e366ef22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:386921161930:instance/i-0fb5b210ee856b5dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb5b210ee856b5dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee399156e148f39f",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-54-162-138-126.compute-1.amazonaws.com",
            "public_ip": "54.162.138.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0989f4f11842feee8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e8571f954fbd47c",
            "tags": {
              "Name": "jenkins-master-ec2"
            },
            "tags_all": {
              "Name": "jenkins-master-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca42562faf2f259e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_key_pair.master-key",
            "aws_main_route_table_association.internet-main-route-table-assc",
            "aws_route_table.internet-main-route-table",
            "aws_security_group.alb_sg",
            "aws_security_group.jenkins-master-sg",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-1-oregon",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs",
            "data.aws_availability_zones.azs-oregon",
            "data.aws_ssm_parameter.linux-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083ac7c7ecf9bb9b0",
            "arn": "arn:aws:ec2:us-west-2:386921161930:instance/i-0e4bb79491cae4aa0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4bb79491cae4aa0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c5f7aab99cf1364",
            "private_dns": "ip-192-168-1-184.us-west-2.compute.internal",
            "private_ip": "192.168.1.184",
            "public_dns": "ec2-35-166-56-158.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.56.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089cbd85738e96847",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1387c5023b6d066",
            "tags": {
              "Name": "jenkins-worker-ec2-1"
            },
            "tags_all": {
              "Name": "jenkins-worker-ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08cd8e9e606ac1ce0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_internet_gateway.igw-oregon",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.internet-main-route-table-assc",
            "aws_main_route_table_association.internet-main-route-table-assc-oregon",
            "aws_route_table.internet-main-route-table",
            "aws_route_table.internet-main-route-table-oregon",
            "aws_security_group.alb_sg",
            "aws_security_group.jenkins-master-sg",
            "aws_security_group.jenkins-worker-sg",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-1-oregon",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs",
            "data.aws_availability_zones.azs-oregon",
            "data.aws_ssm_parameter.linux-ami",
            "data.aws_ssm_parameter.linux-ami-oregon"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083ac7c7ecf9bb9b0",
            "arn": "arn:aws:ec2:us-west-2:386921161930:instance/i-01bc6143b0e0d666b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bc6143b0e0d666b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da034763de2b1690",
            "private_dns": "ip-192-168-1-144.us-west-2.compute.internal",
            "private_ip": "192.168.1.144",
            "public_dns": "ec2-54-202-78-42.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.78.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6266a630e397a54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f1387c5023b6d066",
            "tags": {
              "Name": "jenkins-worker-ec2-2"
            },
            "tags_all": {
              "Name": "jenkins-worker-ec2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08cd8e9e606ac1ce0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_internet_gateway.igw",
            "aws_internet_gateway.igw-oregon",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.internet-main-route-table-assc",
            "aws_main_route_table_association.internet-main-route-table-assc-oregon",
            "aws_route_table.internet-main-route-table",
            "aws_route_table.internet-main-route-table-oregon",
            "aws_security_group.alb_sg",
            "aws_security_group.jenkins-master-sg",
            "aws_security_group.jenkins-worker-sg",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-1-oregon",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs",
            "data.aws_availability_zones.azs-oregon",
            "data.aws_ssm_parameter.linux-ami",
            "data.aws_ssm_parameter.linux-ami-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:internet-gateway/igw-035bb76c50f2000c9",
            "id": "igw-035bb76c50f2000c9",
            "owner_id": "386921161930",
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "dependencies": [
            "aws_vpc.vpc-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:386921161930:internet-gateway/igw-0d710115c92ded3f4",
            "id": "igw-0d710115c92ded3f4",
            "owner_id": "386921161930",
            "vpc_id": "vpc-09881e52535a1737c"
          },
          "dependencies": [
            "aws_vpc.vpc-master-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "internet-main-route-table-assc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e8f5b2d29e298f6",
            "original_route_table_id": "rtb-0386d4e5d7e65d716",
            "route_table_id": "rtb-0b4cb24199379d22a",
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet-main-route-table",
            "aws_subnet.subnet-1-oregon",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "internet-main-route-table-assc-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a75a516a914fa6e",
            "original_route_table_id": "rtb-0d898d4ec408b2389",
            "route_table_id": "rtb-05fae945525119fd1",
            "vpc_id": "vpc-09881e52535a1737c"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet-main-route-table-oregon",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-main-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:route-table/rtb-0b4cb24199379d22a",
            "id": "rtb-0b4cb24199379d22a",
            "owner_id": "386921161930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035bb76c50f2000c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "192.168.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06029d7bd1ea25d7d"
              }
            ],
            "tags": {
              "Name": "master-region-route-table"
            },
            "tags_all": {
              "Name": "master-region-route-table"
            },
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.subnet-1-oregon",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-main-route-table-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:386921161930:route-table/rtb-05fae945525119fd1",
            "id": "rtb-05fae945525119fd1",
            "owner_id": "386921161930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d710115c92ded3f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-06029d7bd1ea25d7d"
              }
            ],
            "tags": {
              "Name": "worker-region-route-table"
            },
            "tags_all": {
              "Name": "worker-region-route-table"
            },
            "vpc_id": "vpc-09881e52535a1737c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:security-group/sg-00f9d705a7042cfd0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f9d705a7042cfd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "386921161930",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-master-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:security-group/sg-0ca42562faf2f259e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca42562faf2f259e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f9d705a7042cfd0"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-master-sg",
            "name_prefix": "",
            "owner_id": "386921161930",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.subnet-1-oregon",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "data.aws_availability_zones.azs-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:386921161930:security-group/sg-08cd8e9e606ac1ce0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cd8e9e606ac1ce0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-worker-sg",
            "name_prefix": "",
            "owner_id": "386921161930",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09881e52535a1737c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:subnet/subnet-02e8571f954fbd47c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02e8571f954fbd47c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "386921161930",
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "dependencies": [
            "aws_vpc.vpc-master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:386921161930:subnet/subnet-0f1387c5023b6d066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f1387c5023b6d066",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "386921161930",
            "vpc_id": "vpc-09881e52535a1737c"
          },
          "dependencies": [
            "aws_vpc.vpc-master-oregon",
            "data.aws_availability_zones.azs-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:subnet/subnet-037d78aabe30db5ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-037d78aabe30db5ed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "386921161930",
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "dependencies": [
            "aws_vpc.vpc-master",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386921161930:vpc/vpc-079590a1f02e564a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b8d532223f293bf",
            "default_route_table_id": "rtb-0386d4e5d7e65d716",
            "default_security_group_id": "sg-0c45cf257b00f1c71",
            "dhcp_options_id": "dopt-fd4f7987",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-079590a1f02e564a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0386d4e5d7e65d716",
            "owner_id": "386921161930",
            "tags": {
              "Name": "master-vpc-jenkins"
            },
            "tags_all": {
              "Name": "master-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-master-oregon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:386921161930:vpc/vpc-09881e52535a1737c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ebb2e0da4c14fd34",
            "default_route_table_id": "rtb-0d898d4ec408b2389",
            "default_security_group_id": "sg-04ec0b7e9d2863f53",
            "dhcp_options_id": "dopt-ac2c00d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09881e52535a1737c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d898d4ec408b2389",
            "owner_id": "386921161930",
            "tags": {
              "Name": "worker-vpc-jenkins"
            },
            "tags_all": {
              "Name": "worker-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-peering-request-useast1-to-uswest2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-06029d7bd1ea25d7d",
            "peer_owner_id": "386921161930",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-09881e52535a1737c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "from-mastervpc-to-worker-vpc"
            },
            "tags_all": {
              "Name": "from-mastervpc-to-worker-vpc"
            },
            "vpc_id": "vpc-079590a1f02e564a4"
          },
          "dependencies": [
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "vpc-peering-accept-usest1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-06029d7bd1ea25d7d",
            "peer_owner_id": "386921161930",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-09881e52535a1737c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "from-mastervpc-to-workervpc-acceptor"
            },
            "tags_all": {
              "Name": "from-mastervpc-to-workervpc-acceptor"
            },
            "vpc_id": "vpc-079590a1f02e564a4",
            "vpc_peering_connection_id": "pcx-06029d7bd1ea25d7d"
          },
          "dependencies": [
            "aws_vpc.vpc-master",
            "aws_vpc.vpc-master-oregon",
            "aws_vpc_peering_connection.vpc-peering-request-useast1-to-uswest2"
          ]
        }
      ]
    }
  ]
}